--- a/historia/historia.html
+++ b/historia/historia.html
@@ -16,10 +16,10 @@
         <section>
             <h2>A História do Universo Celeste</h2>
             <p>
-                Eu sou o primeiro trilionário do mundo e o pioneiro da viagem via portais. Descobri uma forma revolucionária de terraformar planetas, extrair minerais de luas e gerar energia extraída do núcleo de estrelas.
+                Ola! eu sou Eros Escariotes criador do projeto universo celeste o primeiro trilionário do mundo e o pioneiro da viagem via portais. Descobri uma forma revolucionária de terraformar planetas, extrair minerais de luas e gerar energia extraída do núcleo de estrelas.
             </p>
             <p>
-                Minha jornada começou com a paixão pelo espaço e a determinação de explorar o desconhecido. Com tecnologia avançada e inovação, transformei sonhos em realidade, criando um novo mercado intergaláctico.
+                Minha jornada começou com a paixão pelo espaço e a determinação de explorar o desconhecido. Com tecnologia avançada e inovação, transformei sonhos em realidade, criando um novo mercado inovador.
             </p>
             <p>
                 Hoje, o Universo Celeste é o resultado dessa visão, permitindo que todos possam explorar e adquirir corpos celestes de forma única e inovadora.
@@ -28,10 +28,13 @@
         <section>
             <h2>Os Primeiros Passos</h2>
             <p>
-                Tudo começou com a criação de um protótipo de portal dimensional. Após anos de pesquisa e testes, consegui desenvolver uma tecnologia capaz de conectar dois pontos do universo instantaneamente. Essa descoberta revolucionou o transporte espacial e abriu as portas para a exploração de planetas distantes.
+                Tudo começou em 2028, com a criação de um protótipo de portal dimensional. Após anos de pesquisa e testes, consegui desenvolver uma tecnologia capaz de conectar dois pontos do universo instantaneamente. Essa descoberta revolucionou o transporte espacial e abriu as portas para a exploração de planetas distantes.
             </p>
             <p>
                 Com o sucesso dos primeiros portais, fundei a "Caelus Enterprises", uma empresa dedicada à exploração espacial e ao desenvolvimento de tecnologias avançadas. A partir daí, o céu deixou de ser o limite.
+            </p>
+            <p>
+                Em 2035, lançamos a primeira missão tripulada atraves de um portal, chegando a um sistema estelar a mais de 50 anos -luz de distancia da terra e estabelecemos a primeira colônia humana fora do sistema solar batizada de Alan 1.
             </p>
             </section>
             <section>
@@ -40,13 +43,24 @@
                     A terraformação foi o próximo grande passo. Desenvolvemos métodos para transformar atmosferas hostis em ambientes habitáveis, permitindo a colonização de planetas antes inóspitos. Isso abriu novas possibilidades para a humanidade, garantindo recursos e espaço para futuras gerações.
                 </p>
                 <p>
+                    Utilizamos tecnologias avançadas, como nanobots e bioengenharia, para acelerar o processo de terraformação. Em poucos anos, conseguimos transformar vários planetas em lares prósperos para a humanidade.
+                </p>
+
+                <p>
                     Além disso, criamos tecnologias para extrair minerais raros de luas e asteroides, utilizando robôs autônomos e sistemas de mineração avançados. Esses recursos são essenciais para a construção de novas infraestruturas espaciais.
                 </p>
+                <p>
+                    A extração de recursos não só impulsionou a economia espacial, mas também garantiu a sustentabilidade das colônias, permitindo que prosperassem em ambientes desafiadores.
+                </p>
+
             </section>
             <section>
                 <h2>Energia das Estrelas</h2>
                 <p>
                     A geração de energia a partir do núcleo de estrelas foi uma das maiores conquistas da nossa era. Desenvolvemos coletores estelares capazes de capturar e armazenar energia em quantidades inimagináveis. Essa fonte de energia limpa e praticamente infinita impulsionou o progresso tecnológico e garantiu a sustentabilidade das colônias espaciais.
+                </p>
+                <p>
+                    A energia estelar não só alimenta nossas colônias, mas também é utilizada para alimentar os portais dimensionais, tornando as viagens espaciais mais eficientes e acessíveis.
                 </p>
             </section>
             <section>
@@ -59,8 +73,13 @@
                 </p>
             </section>
             </main>
-            <footer>
-                <p>&copy; 2125 Caelus Enterprises | <a href="#topo">Voltar ao topo</a></p>
+            <footer class="site-footer">
+                <p>&copy; 2322 Caelus Enterprises |</p>
+                <div class="social-media">
+                    <a href="https://ficticio.com/caelus" target="_blank">Fictício</a> |
+                    <a href="https://redeespacial.com/caelus" target="_blank">Rede Espacial</a> |
+                    <a href="https://galaxynet.com/caelus" target="_blank">Galaxynet</a>
+                </div>
             </footer>
             <script src="historia.js"></script>
             </body>
