criação da navbar

--- a/historia/historia.html
+++ b/historia/historia.html
@@ -9,6 +9,14 @@
 <body>
     <header>
         <h1>Universo Celeste</h1>
+        <nav>
+            <div class="menu-toggle" id="menu-toggle">&#9776;</div>
+            <div class="nav-links" id="nav-links">
+                <a href="../inicio/inicio.html">Início</a>
+                <a href="#historia">História</a>
+                <a href="../login/login.html">Login</a>
+            </div>
+        </nav>
     </header>
     <main>
         <section>
